--- a/notes/tweakciphers.tex
+++ b/notes/tweakciphers.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Tweakable Ciphers}
+\section{Frequency Analysis, Continued}
 \label{sec:freqanalysis}
 
 
@@ -64,61 +64,410 @@ $\Time(\advA) + 2q+q\cdotsm\Time(\mdist)$.
 \end{align*}
 
 
-\bnm
-\tweakCipher\Colon\keyspace\times\tweakspace\times\msgspace \rightarrow \msgspace
-\enm
+% \bnm
+% \tweakCipher\Colon\keyspace\times\tweakspace\times\msgspace \rightarrow \msgspace
+% \enm
 
-Let $\Perm(\tweakspace,\msgspace$ be set of all functions
-$\tweakspace\times\msgspace\rightarrow\msgspace$ for which 
+% Let $\Perm(\tweakspace,\msgspace$ be set of all functions
+% $\tweakspace\times\msgspace\rightarrow\msgspace$ for which 
 
-\hfpages{.15}{
-		\underline{$\TPRP1_{\tweakCipher}^\advA$}\\
-		$K \getsr \keyspace$\\
-		$b' \getsr \advA^\Fn$\\
-		Return $b'$\medskip
+% \hfpages{.15}{
+% 		\underline{$\TPRP1_{\tweakCipher}^\advA$}\\
+% 		$K \getsr \keyspace$\\
+% 		$b' \getsr \advA^\Fn$\\
+% 		Return $b'$\medskip
 		
-		\underline{$\Fn(T,M)$}\\[1pt]
-		Return $\tweakE_K(T,M)$
-	}{
-		\underline{$\TPRP0_{\tweakCipher}^\advA$}\\
-		$\tweakpi \getsr \Perm(\tweakspace,\msgspace)$\\
-		$b' \getsr \advA^\Fn$\\
-		Return $b'$\medskip
+% 		\underline{$\Fn(T,M)$}\\[1pt]
+% 		Return $\tweakE_K(T,M)$
+% 	}{
+% 		\underline{$\TPRP0_{\tweakCipher}^\advA$}\\
+% 		$\tweakpi \getsr \Perm(\tweakspace,\msgspace)$\\
+% 		$b' \getsr \advA^\Fn$\\
+% 		Return $b'$\medskip
 		
-		\underline{$\Fn(T,M)$}\\[1pt]
-		Return $\tweakpi(T,M)$
-	}
+% 		\underline{$\Fn(T,M)$}\\[1pt]
+% 		Return $\tweakpi(T,M)$
+% 	}
 
-\bnm
-\AdvTPRP{\tweakCipher}{\advA} = \left|\Prob{\TPRP1^\advA\Rightarrow1} - \Prob{\TPRP0^\advA\Rightarrow1} \right|
-\enm
+% \bnm
+% \AdvTPRP{\tweakCipher}{\advA} = \left|\Prob{\TPRP1^\advA\Rightarrow1} - \Prob{\TPRP0^\advA\Rightarrow1} \right|
+% \enm
 
-\fpage{.25}{
-\underline{$\REAL^\advA_{\SE}$}\\[1pt]
-$K \getsr \kg$\\
-$b' \getsr \advA^{\EncOracle}$\\
-Ret $b'$\medskip
+% \fpage{.25}{
+% \underline{$\REAL^\advA_{\SE}$}\\[1pt]
+% $K \getsr \kg$\\
+% $b' \getsr \advA^{\EncOracle}$\\
+% Ret $b'$\medskip
 
-\underline{$\EncOracle(M)$}\\
-$C \getsr \enc_K(M)$\\
-Ret $C$
+% \underline{$\EncOracle(M)$}\\
+% $C \getsr \enc_K(M)$\\
+% Ret $C$
+% }
+
+
+% \fpage{.25}{
+% \underline{$\RAND^\advA_{\SE}$}\\[1pt]
+% $b' \getsr \advA^{\EncOracle}$\\
+% Ret $b'$\medskip
+
+% \underline{$\EncOracle(M)$}\\
+% $C \getsr \bits^{\ctxtlen(M)}$\\
+% Ret $C$
+% }
+
+
+% \bnm
+% \AdvROR{\SE}{\advA} = \left|\Prob{\REAL_{\SE}^\advA\Rightarrow 1} - \Prob{\REAL_{\SE}^\advA\Rightarrow1} \right| 
+% \enm
+
+
+
+
+\section{Tweakable block ciphers}
+\label{sec:tbcs}
+%%Topics: Tweakable block ciphers and randomized encryption
+%%Adiantum - Google's disk encryption construction is a Feistel which uses (reduced-round) ChaCha
+%%Homework assignment - look at Adiantum spec, figure out what their construction is.
+
+Tweakable block ciphers (TBCs) are block ciphers that have a second ``key'' (that need not be secret) called a \emph{tweak}. TBCs are extremely useful in building efficient symmetric-key encryption schemes with tight security proofs.
+
+
+
+
+\paragraph{Defining tweakable block ciphers.} A tweakable block cipher $\tbc = (\kg, \tbce, \tbcd)$ is a triple of 
+algorithms. To a tweakable block cipher $\tbc$ we associate a key space $\keyspace$, tweak space $\tweakspace$, and message space $\msgspace$. Key generation is a randomized algorithm that takes no input and outputs an element of $\keyspace$ sampled uniformly at random. Encryption $\tbce\Colon\keyspace\times\tweakspace\times\msgspace\rightarrow\msgspace$ is a deterministic algorithm that takes a key $K\in\keyspace$, tweak $T\in\tweakspace$, and element $M\in\msgspace$ and outputs an element $C\in\msgspace$. Decryption $\tbcd\Colon\keyspace\times\tweakspace\times\msgspace\rightarrow\msgspace$ is a deterministic algorithm with the same inputs and outputs as $\tbce$.
+
+We say a tweakable block cipher is \emph{correct} if $\forall (K, T, M)\in\keyspace\times\tweakspace\times\msgspace$, $\tbcd(K, T, \tbce(K, T, M))=M$.
+
+\paragraph{Security for tweakable block ciphers.}
+
+Tweakable block cipher security is defined using notions similar to those used for regular block ciphers, namely PRP and SPRP security. A good TBC should be indistinguishable from a family of random permutations where each tweak has an independent random permutation See Figure~\ref{fig:tprp}
+
+\begin{figure}[h]
+\centering
+\hfpagessss{.22}{.22}{.22}{.22}{
+\procedurev{$\TPRPReal_{\advA,\tbc}$}\\
+$K\getsr\calK$\\
+$b\getsr\advA^{\Fun}$\\
+Return $b$\medskip
+
+\procedurev{$\Fun(T, M)$}\\
+Return $\tbce^{T}_{K}(M)$
+}{
+\procedurev{$\TPRPIdeal_{\advA}$}\\
+$\pi\gets [\;]$\\
+$b\getsr\advA^{\RFun}$\\
+Return $b$\medskip
+
+\procedurev{$\Fun(T, M)$}\\
+If $\pi[T]=\bot$ then\\
+\ind $\pi[T]\getsr\Perms(\msgspace)$\\
+Return $\pi[T](M)$
+}{
+\procedurev{$\TSPRPReal_{\advA,\tbc}$}\\
+$K\getsr\calK$\\
+$b\getsr\advA^{\Fun}$\\
+Return $b$\medskip
+
+\procedurev{$\Fun(T, M)$}\\
+Return $\tbce^{T}_{K}(M)$\medskip
+
+\procedurev{$\Fun\inv(T, C)$}\\
+Return $\tbcd^{T}_{K}(C)$
+}{
+\procedurev{$\TSPRPIdeal_{\advA}$}\\
+$\pi\gets [\;]$\\
+$b\getsr\advA^{\RPerm}$\\
+Return $b$\medskip
+
+\procedurev{$\Fun(T, M)$}\\
+If $\pi[T]=\bot$ then\\
+\ind $\pi[T]\getsr\Perms(\msgspace)$\\
+$\pi_T\gets \pi[T]$\\
+Return $\pi_T(M)$\medskip
+
+\procedurev{$\Fun\inv(T, C)$}\\
+If $\pi[T]=\bot$ then\\
+\ind $\pi[T]\getsr\Perms(\msgspace)$\\
+$\pi_T\gets \pi[T]$\\
+Return $\pi_T\inv(C)$
+
 }
 
+\caption{Real and ideal games for tweakable pseudorandom permutation and strong tweakable pseudorandom permutation security of a tweakable block cipher $\tbc = (\tbce,\tbcd)$}
+\label{fig:tprp}
+\end{figure}
 
-\fpage{.25}{
-\underline{$\RAND^\advA_{\SE}$}\\[1pt]
-$b' \getsr \advA^{\EncOracle}$\\
-Ret $b'$\medskip
+\subsection*{Building Tweakable Block Ciphers} How do we build tweakable block ciphers? One way is to let $\tbce^{T}_{K} = E_{E_K(T)}(M)$. In practice this will be slow because key scheduling can be expensive, and you need to change key every time. For AES this construction has about a factor of 2 overhead.
 
-\underline{$\EncOracle(M)$}\\
-$C \getsr \bits^{\ctxtlen(M)}$\\
-Ret $C$
+The Luby-Rackoff construction can be turned into a TBC easily: if the round function is a variable-length PRF, just add the tweak to the input of each round function. This is not ideal because need several PRF calls per TBC invocation.
+
+\paragraph{The CMT construction.} For a block cipher $E$, the CMT construction of LRW builds a tweakable block cipher as $\tbce^T_K(M) = E_K(T\oplus E_K(M))$ and $\tbcd^T_K(C) = D_K(T\oplus D_K(C))$.
+An observation about this construction: it's the same as CBC-MAC on the message space $\msgspace\times\msgspace$ (where $\msgspace$ is the message space of $E$).
+
+\begin{theorem}
+  Let $E\Colon\keyspace\times\msgspace\rightarrow\msgspace$ be a block cipher and $\lrw[E]$ the tweakable block cipher built from it as described above. For any TPRP adversary $\advA$ making at most $q$ queries, there exists a PRP adversary $\advB$ so that
+  \bnm
+  \AdvTPRP{\lrw[E]}{\advA} \leq \AdvPRP{E}{\advB} + \frac{17q^2}{2^{n+1}}\; .
+  \enm
+  The adversary $\advB$ runs in the same amount of time as $\advA$ and makes $2q$ queries to its oracle.
+\end{theorem}
+\begin{proof}
+  %This proof is taken basically verbatim from the LRW paper
+  Define the game $G_0$ to be $\TPRPReal_{\lrw[E]}$. Next, define the game $G_1$ to be $\TPRPReal$, except the adversary's oracle $\Fun$ is replaced by a function $R\Colon\msgspace\times\msgspace\rightarrow\msgspace$ sampled uniformly at random from the set of all such functions. Using the observation that $\lrw[E]$ is exactly CBC-MAC, we can apply the proof of security of CBC-MAC to get an adversary $\advB$ so that
+  \bnm
+  \left\lvert\Prob{G_0\Rightarrow 1}-\Prob{G_1\Rightarrow 1}\right\rvert \leq \AdvPRP{E}{\advB} + \frac{16q^2}{2^{n+1}}\; .
+  \enm
+
+  Next define the game $G_2$ to be identical to $\TPRPIdeal$. The game $G_1$ is almost, but not quite, the same as $G_2$. The difference is that in game $G_1$, for each fixed tweak $\Fun$ is a random function but in game $G_2$ it is a random permutation. Thus we can apply the RP-RF switching lemma to get that
+  \bnm
+  \left\lvert\Prob{G_1\Rightarrow 1}-\Prob{G_2\Rightarrow 1}\right\rvert \leq \frac{q^2}{2^{n+1}}\; .
+  \enm
+
+  Applying the triangle inequality yields the bound.\hfill\qedsym
+\end{proof}
+
+LRW construction requires 2 block cipher calls per msg block... can we do better? Yes, but first we must briefly introduce finite fields.
+% Assume msg space is $\msgspace = \zon{n}$ and $\tweakspace = \zon{n} \times [0, \ldots, 2^n-2]$.
+% Take $\tbce^T_K(M) = E_K(E_K(T)\oplus i \oplus M)$. Does not work b/c can choose $i,M$ to cause collision
+
+\paragraph{Essentials on finite fields} $\gftwo{n}$ is a finite (Galois) field over $n$-bit strings. Represent point $a$ equivalently as:
+\begin{itemize}
+\item polynomial $a(x) = a_{n-1}x^{n-1} + \cdots + a_1 x + a_0$
+\item integer $a = \sum\limits_{i=0}^{n-1} a_i 2^i$
+\item bit string $a= a_{n-1}\cdots a_0$
+\end{itemize}
+
+To do \textbf{addition} of $a$ and $b$ in $\gf{2^n}$, simply take the bitwise XOR. To do \textbf{multiplication} of $a$ and $b$, first fix primitive polynomial, e.g. $x^{128} + x^{7} + x^2 + x + 1$. Multiply points by treating as polynomials: multiply formal polynomials representing $a$ and $b$ s and take remainder modulo the primitive polynomial. One interesting fact about $\gftwo{n}$ is that the element $2=(0^{126}10)$ is a primitive root of unity: taking powers generates all of $\gftwo{n}$ (save 0). Multiplication by 2 in hardware is fast: it can be implemented with only a few shift and XOR operations on bits.
+
+
+
+\paragraph{Fast TPRPs: XE construction} The XE construction (described in Figure~\ref{fig:xe}) of Rogaway is a very fast TBC. It uses a two-part tweak space $\tweakspace = \zon{n}\times [0, \ldots, 2^{n}-2]$ with the property that the right-hand part of the tweak is very cheap to change, requiring only one multiplication by 2 in $\gftwo{n}$.
+
+\begin{figure}[h]
+  \centering
+  \hfpages{.25}{
+    \procedurev{$\xeenc(K, T, i, M)$}\\
+    $\Delta\gets E_K(T)\odot 2^i$\\
+    Return $E_K(M\oplus \Delta)$
+  }{
+    \procedurev{$\xedec(K, T, i, C)$}\\
+    $\Delta\gets E_K(T)\odot 2^i$\\
+    Return $D_K(C)\oplus\Delta$
+  }
+  \caption{$\xe[E]$ construction encryption and decryption for block cipher $E$. The symbol $\odot$ denotes multiplication in $\gftwo{n}$.}
+  \label{fig:xe}
+\end{figure}
+
+
+\paragraph{Analyzing the TPRP security of XE.} Next we state and prove a theorem about the TPRP security of the XE tweakable block cipher.
+
+\begin{theorem}
+  Let $E\Colon\keyspace\times\msgspace\rightarrow\msgspace$ be a block cipher and $\xe[E]$ the tweakable block cipher built from it as described in Figure~\ref{fig:xe}. For any TPRP adversary $\advA$ making at most $q$ queries, there exists a PRP adversary $\advB$ so that
+  \bnm
+  \AdvTPRP{\xe[E]}{\advA} \leq \AdvPRP{E}{\advB} + \frac{9q^2}{2^n}\; .
+  \enm
+  The adversary $\advB$ runs in the same amount of time as $\advA$ and makes $2q$ queries to its oracle.
+\end{theorem}
+\begin{proof}
+  % This proof is taken basically verbatim from http://web.cs.ucdavis.edu/~rogaway/papers/offsets.pdf
+  We begin with game $G_0$ of Figure~\ref{fig:xe-tprp-games}. This is identical to game $\TPRPReal^\advA_{\xe[E]}$. Next we transition to game $G_1$, which replaces $E$ with a random permutation. We can construct a reduction $\advB$ to the PRP security of $E$ (which simulates $\advA$'s queries in the obvious way) to get that
+  \bnm
+  \left\lvert\Prob{G_0\Rightarrow 1} - \Prob{G_1\Rightarrow 1}\right\rvert \leq \AdvPRP{E}{\advB}\; .
+  \enm
+  Note that $\advB$ makes at most $2q$ queries to its oracle, since each of $\advA$'s queries needs at most 2 invocations of $E$. Next we move to game $G_2$ of Figure~\ref{fig:xe-tprp-games}, which replaces the permutation $\pi$ with a random function on the same domain and range. It also sets some bad flags which have no effect on the output distributions. Again, here note that in $q$ queries at most $2q$ calls to the random function are made. We can apply the RP-RF switching lemma to get that
+  \bnm
+  \left\lvert\Prob{G_1\Rightarrow 1} - \Prob{G_2\Rightarrow 1}\right\rvert \leq \frac{4q^2}{2^n}\; .
+  \enm
+
+  Next we move to game $G_3$, which is the same as $G_2$ except the boxed statements are removed. By the fundamental lemma of game-playing $G_3$ and $G_2$ are identical until the bad flag is set.
+  % This argument is wayyyy too hand-wavy, revise when less tired
+  This happens only when the (distinct) $T$ values collide with $X$ values or two $X$ values collide. There are at most $2q$ such values, so
+  \bnm
+  \left\lvert\Prob{G_2\Rightarrow 1} - \Prob{G_3\Rightarrow 1}\right\rvert \leq \frac{4q^2}{2^n}\; .
+  \enm
+
+  Next we move to game $G_4$, which uses a table of independent random functions (one per tweak) to answer oracle queries. Without the boxed statements $G_3$ and $G_4$ are identical, so $\Prob{G_3\Rightarrow 1} = \Prob{G_4\Rightarrow 1}$. Next we move to game $G_5$ (not pictured) which is identical to $\TPRPIdeal^\advA$. We again apply the RP-RF switching lemma to get that
+  \bnm
+  \left\lvert\Prob{G_4\Rightarrow 1} - \Prob{G_5\Rightarrow 1}\right\rvert \leq \frac{q^2}{2^n}\; .
+  \enm
+\end{proof}
+
+\begin{figure}[t]
+  \centering
+  \hfpagessss{.20}{.20}{.20}{.20}{
+    \procedurev{$G_0$}\\
+    $K\getsr\calK$\\
+    $b\getsr\advA^{\Fun}$\\
+    Return $b$\medskip
+
+    \procedurev{$\Fun(T', M)$}\\
+    $T,i\gets T'$\\
+    $\Delta\gets E_K(T)\odot 2^i$\\
+    Return $E_K(M\oplus \Delta)$
+  }{
+    \procedurev{$G_1$}\\
+    $\pi\gets \Perms(\msgspace)$\\
+    $b\getsr\advA^{\Fun}$\\
+    Return $b$\medskip
+
+    \procedurev{$\Fun(T', M)$}\\
+    $T,i\gets T'$\\
+    $\Delta\gets \pi(T)\odot 2^i$\\
+    Return $\pi(M\oplus \Delta)$
+  }{
+    \procedurev{$G_2,\boxed{G_3}$}\\
+    $\rho\gets [\, ]$\\
+    $\text{PrevT}\gets [\, ]$\\
+    $b\getsr\advA^{\Fun}$\\
+    Return $b$\medskip
+
+    \procedurev{$\Fun(T', M)$}\\
+    $T,i\gets T'$\\
+    If $T\in\text{PrevT}$ then\\
+    \ind $R\gets \text{PrevT}[T]$\\
+    Else If $T\in\rho$ then\\
+    \ind $\cbad\gets\ctrue$\\
+    \ind $\boxed{R\gets \rho[T]}$\\
+    Else\\
+    \ind $R\getsr\zon{n}$\\
+    \ind $\rho[T]\gets R$\\
+    $\text{PrevT}[T]\gets R$\\
+    $X\gets M\oplus R\odot 2^i$\\
+    $Y\getsr\zon{n}$\\
+    If $X\in\rho$ then\\
+    \ind $\cbad\gets\ctrue$\\
+    \ind $\boxed{Y\gets\rho[X]}$\\
+    Else\\
+    \ind $\rho[X]\gets Y$\\
+    Return $\rho[X]$
+  }{
+    \procedurev{$G_4$}\\
+    $F\gets [\,]$\\
+    $b\getsr\advA^{\Fun}$\\
+    Return $b$\medskip
+
+    \procedurev{$\Fun(T', M)$}\\
+    $T,i\gets T'$\\
+    If $F[T,i] = \bot$ then\\
+    \ind $F[T, i]\getsr\Funs{\msgspace}$\\
+    Return $F[T, i](M)$
+  }
+  \caption{Games for proof of TPRP security of XE}
+  \label{fig:xe-tprp-games}
+  \end{figure}
+
+
+
+\paragraph{TSPRP attack on XE.} The TBC $\xe[E]$ is a good tweakable pseudorandom permutation, but is not a good tweakable \emph{strong} pseudorandom permutation. Figure~\ref{fig:xe-tsprp-dist} defines a TSPRP adversary $\advB$ with $\AdvTSPRP{\xe[E]}{\advB} \geq 1-\frac{1}{2^n}$.
+
+\begin{figure}[h]
+\centering
+\fpage{.22}{
+\procedurev{$\advB^{\Fun,\Fun\inv}$}\\
+ $M_0\gets \Fun\inv((0, 0), C)$\\
+$M_1\gets\Fun\inv((1, 0), C)$\\
+$C'\gets\Fun((1, 0), 0)$\\
+$C^*\gets\Fun((0, 0), M_0\oplus M_1)$\\
+Return $C' = C^*$
 }
+\caption{TSPRP distinguisher for XE}
+\label{fig:xe-tsprp-dist}
+\end{figure}
+\iffalse
+\begin{align*}
+  M_0 &= D_K(C_0) \oplus E_K(0)\;\; (=\xedec(K, (0, 0), C))\\
+  M_1 &= D_K(C_0) \oplus E_K(1)\;\; (=\xedec(K, (1, 0), C))\\
+  M_0 \oplus M_1 &= E_K(0) \oplus E_K(1)\\
+  \xeenc(K, (1, 0), 0) &= E_K(E_K(1))\\
+  \xeenc(K, (0, 0), M_0 \oplus M_1) &= E_K(E_K(0) \oplus M_0 \oplus M_1) = E_K(E_K(0) \oplus E_K(0) \oplus E_K(1)) = E_K(E_K(1))
+\end{align*}
+\fi
 
-
+\paragraph{Randomized symmetric encryption} A symmetric encryption scheme $\SE = (\kg, \enc, \dec)$ 
+is a tuple of algorithms. Associated to a symmetric encryption scheme is a key space $\keyspace$, message space $\msgspace$, nonce space $\noncespace$, and ciphertext space $\ctxtspace$.
+Key generation $\kg$ takes no input and outputs an element of $\keyspace$ sampled uniformly at random. Encryption $C\getsr\enc(K, M)$ is a randomized algorithm that takes a key $K\in\keyspace$ and message $M\in\msgspace$ and outputs a ciphertext $C\in\ctxtspace$. Decryption $M\gets\dec(K, C)$ is a deterministic algorithm that takes a key $K\in\keyspace$ and ciphertext $C\in\ctxtspace$ and outputs a message $M\in\msgspace$. Symmetric encryption schemes must be correct in the following sense: $\forall K\in\keyspace,M\in\msgspace$,
 \bnm
-\AdvROR{\SE}{\advA} = \left|\Prob{\REAL_{\SE}^\advA\Rightarrow 1} - \Prob{\REAL_{\SE}^\advA\Rightarrow1} \right| 
+\Prob{\dec(K, \enc(K, M)) = M} = 1
+\enm
+where the probability is taken over the random coins sampled in $\enc$. We will associate to $\SE$ an auxiliary function $\clen\Colon\integers\rightarrow\integers$ which takes as input an integer $\ell$ and outputs an integer $\ell_c$ denoting the length of a ciphertext for \emph{any} message of $\ell$ bits in length. Informally, in symmetric encryption the length of a ciphertext must only depend on the length of a message, not the message itself. 
+
+
+To a symmetric encryption scheme $\SE$ and adversary $\advA$ we associate an advantage measure $\AdvROR{\SE}{\advA}$ defined as 
+\bnm
+\AdvROR{\SE}{\advA} = \left\lvert \Prob{\rorcpareal^\advA_{\SE}\Rightarrow 1} - \Prob{\rorcpaideal^\advA_{\SE}\Rightarrow 1}\right\rvert
+\enm
+where games $\rorcpareal$ and $\rorcpaideal$ are as in Figure~\ref{fig:rorcpa}.
+
+\begin{figure}[t]
+\centering
+\hfpages{.25}{
+\procedurev{$\rorcpareal^\advA_{\SE}$}\\
+$K\getsr\kg$\\
+$b\getsr\advA^{\Fun}$\\
+Return $b$\medskip
+
+\procedurev{$\Fun(M)$}\\
+Return $\enc(K, M)$
+}{
+\procedurev{$\rorcpaideal^\advA_{\SE}$}\\
+$b\getsr\advA^{\Fun}$\\
+Return $b$\medskip
+
+\procedurev{$\Fun(M)$}\\
+$C\getsr\zon{\clen(|M|)}$\\
+Return $C$
+}
+\caption{Games defining real-or-random security under chosen-plaintext attack of a symmetric encryption scheme $\SE$.}
+\label{fig:rorcpa}
+\end{figure}
+
+\paragraph{"OCB-CPA" and its security.} For a tweakable block cipher $\tbc = (\kg, \tbce, \tbcd)$, define the randomized symmetric encryption scheme $\ocbcore[\tbc]$ with encryption and decryption as given in Figure~\ref{fig:ocbcore}. Its tweak space is $\tweakspace = \zon{n}\times [0, \ldots, 2^{n}-2]$. For 
+simplicity, we only allow block-aligned message inputs (i.e. all messages have length $\ell$ where $n\,|\, \ell$).
+
+
+\begin{figure}[h]
+\centering
+\hfpages{.35}{
+\procedurev{$\ocbcore[\tbc].\enc(K, M)$}\\
+$T\getsr\tweakspace$\\
+$C'\gets \tbce_K^{T,0}(M_0)\concat \cdots \concat \tbce_K^{T,n-1}(M_{n-1})$\\
+Return $T\concat C'$
+}{
+\procedurev{$\ocbcore[\tbc].\dec(K, C)$}\\
+$T\gets C_0$\\
+$M\gets \tbcd_K^{T,0}(C_1)\concat \cdots \concat \tbcd_K^{T,n-1}(C_n)$\\
+Return $M$
+}
+\caption{$\ocbcore[\tbc]$ construction encryption and decryption for tweakable block cipher $\tbc$.}
+\label{fig:ocbcore}
+\end{figure}
+
+
+\begin{theorem}
+Let $\ocbcore[\tbc]$ be the encryption algorithm described in Figure~\ref{fig:ocbcore}. For any real-or-random adversary $\advA$ making $q$ queries totaling at most $\sigma$ blocks, there exists a TPRP adversary $\advB$ so that
+\bnm
+\AdvROR{\ocbcore[\tbc]}{\advA} \leq \AdvTPRP{\tbc}{\advB} + \frac{q^2}{2^n}\; .
+\enm
+\end{theorem}
+\begin{proof}
+%Change every TPRP call with indep random perm after identical-til-bad for tweak collisions, then you're done
+We start with the game $G_0$, which is identical to $\rorcpareal^\advA_{\ocbcore[\tbc]}$. We next move to a game $G_1$ where a flag $\cbad$ is set to $\ctrue$ if a repeat tweak is sampled in encryption. Nothing else is different from $G_0$, so $\Prob{G_0\Rightarrow 1} = \Prob{G_1\Rightarrow 1}$. Next we define $G_2$ which is the same as $G_1$ except if the $\cbad$ flag is set, a new tweak (distinct from all previous ones) is sampled. By the fundamental lemma of code-based games, 
+\bnm
+\left\lvert\Prob{G_1\Rightarrow 1} - \Prob{G_2\Rightarrow 1}\right\rvert \leq \frac{q^2}{2^{n+1}}\; .
+\enm
+In game $G_2$ tweaks are never repeated. Next we move to game $G_3$, which is the same as $G_2$ except a fresh uniformly random permutation (one per distinct tweak) is applied to each message block instead of the TBC. We can build a reduction $\advB$ to the TPRP security of $\tbc$ (which reduction simply passes each block of $\advA$'s inputs to its oracle with a uniform tweak) to get that
+\bnm
+\left\lvert\Prob{G_2\Rightarrow 1} - \Prob{G_3\Rightarrow 1}\right\rvert \leq \AdvTPRP{\tbc}{\advB}\; .
 \enm
 
+Next we move to $G_4$, which is the same as $G_3$ except on input $M$ with $|M|/n = \ell$, the value $C'$ is a uniformly random string in $(\zon{n})^\ell$. In words, each ciphertext is generated as a uniformly random string instead of via a permutation. Since we guarantee each tweak is distinct, the distribution over the oracle's outputs is identical in both $G_3$ and $G_4$, and $\Prob{G_3\Rightarrow 1} = \Prob{G_4\Rightarrow 1}$. 
 
+Finally we move to game $G_5$, which removes the line that forces each tweak to be distinct. We can apply the same argument as the $G_1$ to $G_2$ transition above to get that
 
+\bnm
+\left\lvert\Prob{G_4\Rightarrow 1} - \Prob{G_5\Rightarrow 1}\right\rvert \leq \frac{q^2}{2^{n+1}}\; .
+\enm
+
+In game $G_5$ the output of the oracle is a uniformly random string; thus $G_5$ is identical to $\rorcpaideal$ and we are done.\hfill\qedsym
+\end{proof}
